--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 
   <!-- Challenge 1: Wrap the text below with a link that has an absolute path -->
   Absolute Path (external link)
-
+<a href="https://www.google.com/search?q=lake+brienz&rlz=1C5CHFA_enUS921US924&source=lnms&tbm=isch&sa=X&ved=2ahUKEwjV_PeXktHsAhXJUt8KHQS6CJsQ_AUoAXoECA8QAw&biw=1440&bih=723&dpr=2#imgrc=lrpoWAL5tahIsM"> Google images</a>
   <!-- Challenge 2: Wrap the text below with a link that has a relative path to about.html-->
   Relative Path (internal link)
-
+<a href="about.html">About Page</a>
   <!-- Challenge 3: Wrap the img tag below with a link that uses the target attribute -->
   <img src="https://ironboard-learn.s3.amazonaws.com/Image_61_lion.jpg" alt="Image by Alexas Fotos from Pixabay">
-
+<a href= "https://www.google.com" target="_blank">Google</a>
 </body>
 </html>
